| Bug #12562 | sysdate() not behaving according to Oracle behavior | ||
|---|---|---|---|
| Submitted: | 13 Aug 2005 2:05 | Modified: | 26 Aug 2005 21:54 |
| Reporter: | Brian Aker | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | OS: | ||
| Assigned to: | Jim Winstead | Target Version: | |
[13 Aug 2005 2:05]
Brian Aker
[18 Aug 2005 2:20]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/28425
[23 Aug 2005 2:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/28661
[25 Aug 2005 0:51]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/28783
[25 Aug 2005 2:14]
Jim Winstead
Fixed in 5.0.13.
[26 Aug 2005 21:54]
Paul DuBois
Noted in 5.0.13 changelog, functions chapter.
[10 Mar 2006 15:09]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/3708
[10 Mar 2006 15:48]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/3710
