Make SYSDATE() behave as in Oracle: always the current datetime, not the datetime of when the current statement began. This also makes SYSDATE() not safe in replication. (Bug #12562)